--- a/src/stylesheets/components/_star.scss
+++ b/src/stylesheets/components/_star.scss
@@ -1,16 +1,15 @@
-@import "globals";
-
 div.star {
     cursor: pointer;
-    height: 25px;
-    width: 25px;
-    margin: 2px;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: .2rem;
     float: left;
-    background-color: darken($light-grey, 40%);
+
+    background-color: $color-grey-light;
     clip-path: polygon(50% 0%, 63% 38%, 100% 38%, 69% 59%, 82% 100%, 50% 75%, 18% 100%, 31% 59%, 0% 38%, 37% 38%);
 
     &.selected {
-        background-color: red;
+        background-color: $color-red;
     }
 
 }
