--- a/src/stylesheets/modules/_mixins.scss
+++ b/src/stylesheets/modules/_mixins.scss
@@ -14,13 +14,12 @@ ORDER: Base + typography > general layout + grid > page layout > components
 1em = 16px
 */
 
+// From 0 - 700px
 @mixin respond($breakpoint) {
     @if $breakpoint==phone {
-        @media only screen and (max-width: 37.5em) {
+        @media only screen and (min-width: 43.75em) {
             @content
         }
-
-        ; //600px
     }
 
     @if $breakpoint==tab-port {
