--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -10,3 +10,4 @@
 @import 'components/_addcolorform.scss';
 @import 'components/_color.scss';
 @import 'components/_star.scss';
+@import 'components/_checkbox.scss'
