--- a/src/stylesheets/components/_addcolorform.scss
+++ b/src/stylesheets/components/_addcolorform.scss
@@ -1,28 +1,71 @@
-form.add-color {
+.color-saver {
+    background: $color-primary-light;
+    border-radius: $border-radius;
+    box-shadow: $box-shadow-light;
+    padding-top: 2rem;
+
     width: 100%;
+    position: relative;
+
     display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    >:first-child {
-        flex-grow: 1;
+
+    @include respond(phone) {
+        width: 80%;
     }
 
-    input,
-    button {
-        margin: .5em;
-        padding: .25em;
-        font-size: 1.2em;
-        border-radius: 5px;
+    &__color-select {
+        width: stretch;
     }
 
-    input[type="color"] {
-        padding: 0;
-        height: +2em;
+    &__color-form {
+        width: 10rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
-    button {
-        background-color: green;
-        color: white;
+    &__button {
+        font-family: $base-font;
+        font-weight: $font-bold;
+        color: $base-font-color;
+        font-size: 2rem;
+        padding: 2rem;
+        width: 100%;
+        border-radius: 5rem;
         border: none;
-    }
+        background-color: $color-grey-utilities;
+        transition: all .1s;
 
+        &:hover {
+            color: $color-primary-light;
+            background: lighten($color-secondary-light, 25%);
+        }
+    }
+}
+
+input {
+    margin-bottom: 3rem;
+    font-family: $base-font;
+    font-size: 2rem;
+    text-align: center;
+    color: $color-grey-dark;
+    text-transform: uppercase;
+    padding: 1rem;
+    border: none;
+    border-radius: $border-radius;
+    background: $color-grey-utilities;
+
+    &:focus {
+        border: $outline;
+    }
+}
+
+::placeholder {
+    color: $color-grey-light
 }
