--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -6,8 +6,8 @@
 @import 'partials/_typography.scss';
 
 // Component Styles
-@import 'components/_buttons.scss';
 @import 'components/_addcolorform.scss';
 @import 'components/_color.scss';
 @import 'components/_star.scss';
-@import 'components/_checkbox.scss'
+@import 'components/_checkbox.scss';
+@import 'components/_colorpicker.scss';
