--- a/src/stylesheets/partials/_base.scss
+++ b/src/stylesheets/partials/_base.scss
@@ -11,6 +11,7 @@
 }
 
 html {
+
     font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
 }
 
@@ -19,6 +20,8 @@ body {
     box-sizing: border-box;
     padding: 3rem;
     background: $color-primary-dark;
+    color: $base-font-color;
+
 }
 
 input {
