--- a/src/stylesheets/modules/_mixins.scss
+++ b/src/stylesheets/modules/_mixins.scss
@@ -18,35 +18,17 @@ ORDER: Base + typography > general layout + grid > page layout > components
 1em = 16px
 */
 
-// From 0 - 700px
+// From 500px - 780px
 @mixin respond($breakpoint) {
-    @if $breakpoint==phone {
-        @media only screen and (min-width: 43.75em) {
+    @if $breakpoint==smallest {
+        @media only screen and (min-width: 31.25em) {
             @content
         }
     }
 
-    @if $breakpoint==tab-port {
-        @media only screen and (max-width: 56.25em) {
+    @if $breakpoint==small {
+        @media only screen and (min-width: 48.75em) {
             @content
         }
-
-        ; //900px
-    }
-
-    @if $breakpoint==tab-land {
-        @media only screen and (max-width: 75em) {
-            @content
-        }
-
-        ; //1200px
-    }
-
-    @if $breakpoint==big-desktop {
-        @media only screen and (min-width: 112.5em) {
-            @content
-        }
-
-        ; //1800
     }
 }
