--- a/src/stylesheets/modules/_variables.scss
+++ b/src/stylesheets/modules/_variables.scss
@@ -4,10 +4,12 @@ $color-green: lighten(#509e33, 20%);
 
 // Main Colors
 $color-grey-dark: #5d6063;
+$color-grey: lighten($color-grey-dark, 10%);
 $color-grey-light: #cbcbcb;
-$color-grey-utilities: lighten($color-grey-dark, 50%);
 
-$color-primary-dark: #f1f1f1;
+$color-grey-lightest: lighten($color-grey-dark, 50%);
+
+$color-primary-dark: #e9e8e8;
 $color-primary-light: #f5f5f5;
 
 $color-secondary-darkest:#33649e;
@@ -28,4 +30,6 @@ $box-shadow-dark: 3px 3px 10px rgba($color-grey-dark, .3);
 
 //Border-Radius
 $border-radius: .5rem;
-$outline: 3px solid lighten($color-secondary-light, 25%);
+
+$outline: 3px solid lighten($color-green, 20%);
+// $outline: 3px solid lighten($color-secondary-light, 25%);
