--- a/src/stylesheets/partials/_base.scss
+++ b/src/stylesheets/partials/_base.scss
@@ -3,8 +3,8 @@
 @import 'typography';
 
 *,
-*::after,
-*::before {
+*:after,
+*:before {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
