--- a/src/stylesheets/components/_color.scss
+++ b/src/stylesheets/components/_color.scss
@@ -21,7 +21,7 @@
 
     &:hover {
         box-shadow: $box-shadow-dark;
-        background: darken($color-primary-light, 4%);
+        background: white;
     }
 
     &__buttons-box {
