--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,3 +11,5 @@
 @import 'components/_star.scss';
 @import 'components/_checkbox.scss';
 @import 'components/_colorpicker.scss';
+@import 'components/_dropdown.scss';
+@import 'components/_palletcontrols.scss';
