--- a/src/stylesheets/modules/_utility.scss
+++ b/src/stylesheets/modules/_utility.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 ///-- Margin Utilities -->
 
 // Margin bottom
@@ -46,4 +47,12 @@
 
 .color-selected {
     border: $outline;
+}
+
+.list-item--selected {
+    background: $color-primary-dark;
+}
+
+.hidden {
+    display: none;
 }
