Add palette and gallery view controls

--- a/src/stylesheets/components/_palletcontrols.scss
+++ b/src/stylesheets/components/_palletcontrols.scss
@@ -1,5 +1,6 @@
 .palette-controls {
     @include section-styles;
+    padding: 5rem 0 3rem 0;
     background: $color-primary-light;
     width: 100%;
 
