--- a/src/stylesheets/components/_addcolorform.scss
+++ b/src/stylesheets/components/_addcolorform.scss
@@ -43,7 +43,7 @@ input {
     border: none;
     border-radius: $border-radius;
     background: $color-primary-dark;
-    transition: all .2s ease-in-out;
+    transition: all .2s ease-out;
 
     &:hover {
         background: $color-grey-lightest;
