--- a/src/stylesheets/components/_dropdown.scss
+++ b/src/stylesheets/components/_dropdown.scss
@@ -42,6 +42,7 @@
         justify-content: space-between;
         align-items: flex-start;
         z-index: 1;
+        transition: all .3s ease-out;
 
         &:hover {
             background: $color-grey-lightest;
@@ -53,4 +54,12 @@
         }
 
     }
+}
+
+.arrow {
+    transition: transform .3s;
+}
+
+.up {
+    transform: rotate(-180deg);
 }
