--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -12,4 +12,6 @@
 @import 'components/_checkbox.scss';
 @import 'components/_colorpicker.scss';
 @import 'components/_dropdown.scss';
-@import 'components/_palletcontrols.scss';
+@import 'components/_palette-view.scss';
+@import 'components/_palettecontrols.scss';
+@import 'components/_buttons.scss';
