--- a/src/stylesheets/components/_palette-view.scss
+++ b/src/stylesheets/components/_palette-view.scss
@@ -5,8 +5,9 @@
         transform: translateX(8px);
         border-radius: $border-radius;
         width: 80%;
+        text-align: center;
 
-        padding: 2rem;
+        padding: 2rem 0;
         background: white;
 
         display: flex;
@@ -24,7 +25,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-
     }
 
     &__name {
