Fix update palette reducer to accept deselect appropriate palettes

--- a/src/stylesheets/components/_palettecontrols.scss
+++ b/src/stylesheets/components/_palettecontrols.scss
@@ -29,6 +29,8 @@
         width: 100%;
         overflow-y: scroll;
         max-height: 50rem;
+
+        animation: fade-in-down 1s forwards;
     }
 }
 
