--- a/src/stylesheets/components/_palette-view.scss
+++ b/src/stylesheets/components/_palette-view.scss
@@ -2,9 +2,9 @@
 
     &__container {
         margin: 0 auto;
-        transform: translateX(8px);
+        transform: translateX(4px);
         border-radius: $border-radius;
-        width: 80%;
+        width: 90%;
         text-align: center;
 
         padding: 2rem 0;
@@ -25,6 +25,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        padding: 0 1.5rem;
     }
 
     &__name {
@@ -55,7 +56,7 @@
 
     &__colorbox {
         width: 100%;
-
+        border-radius: $border-radius;
         height: 3rem;
         width: 3.5rem;
 
