Add remove and palette color select functionality

--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -12,7 +12,7 @@
     &--content-open {
 
 
-        color: $color-secondary-dark;
+        color: $color-secondary-light;
         font-weight: $font-bold;
 
     }
