--- a/src/stylesheets/modules/_mixins.scss
+++ b/src/stylesheets/modules/_mixins.scss
@@ -31,7 +31,7 @@
 
     &:hover {
         color: $color-primary-light;
-        background: $color-secondary-dark;
+        background: $color-secondary-light;
 
     }
 }
