--- a/src/stylesheets/components/_dropdown.scss
+++ b/src/stylesheets/components/_dropdown.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     width: 23rem;
-    height: 7rem;
+    padding-top: 1rem;
+    height: 8rem;
     padding-bottom: 1.5rem;
 
     // border: 1px solid $color-grey-lightest;
@@ -13,12 +14,17 @@
 
 
     &__header {
+
+        position: relative;
         align-items: center;
         justify-content: center;
         height: 100%;
         width: 100%;
         background: white;
         z-index: 10;
+        border-top-right-radius: .5rem;
+        border-top-left-radius: .5rem;
+
     }
 
     &__header-title {
@@ -32,6 +38,8 @@
         z-index: 5;
         color: $color-grey-dark;
         animation: drop .5s linear forwards;
+        box-shadow: 1px 5px 5px rgba(128, 128, 128, 0.158);
+        border-radius: .5rem;
 
     }
 
@@ -53,10 +61,11 @@
         align-items: flex-start;
         z-index: 1;
         transition: all .3s ease-out;
-        box-shadow: $box-shadow-light;
+        box-shadow: 0px 2px 3px rgba(128, 128, 128, 0.075);
 
         &:last-of-type {
-            border-bottom: $color-grey-lightest;
+            border-bottom-right-radius: .5rem;
+            border-bottom-left-radius: .5rem;
         }
 
         &:hover {
@@ -68,12 +77,9 @@
             font-size: 1.5rem;
         }
 
+
     }
 
-    &__list-item:last-child {
-        border-bottom: 1px solid $color-grey-lightest;
-        box-shadow: $box-shadow-light;
-    }
 }
 
 .arrow {
