--- a/src/stylesheets/components/_palettecontrols.scss
+++ b/src/stylesheets/components/_palettecontrols.scss
@@ -5,6 +5,20 @@
     background: $color-primary-light;
     width: 100%;
     animation: fade-in-down 1s forwards;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 9.3rem;
+
+        width: 80%;
+        height: 4rem;
+        background: linear-gradient(rgba(255, 255, 255, 0.001),
+            white);
+        /* transparent keyword is broken in Safari */
+        pointer-events: none;
+    }
 
     @include respond(smallest) {
         width: 80%;
@@ -31,6 +45,9 @@
         max-height: 50rem;
 
         animation: fade-in-down 1s forwards;
+
+
+
     }
 }
 
