--- a/src/stylesheets/components/_colorpicker.scss
+++ b/src/stylesheets/components/_colorpicker.scss
@@ -1,3 +1,7 @@
 .color-picker {
     padding: 3rem;
+    background: $color-primary-light;
+    box-shadow: $box-shadow-dark;
+    border-radius: $border-radius;
+    margin-bottom: 5rem;
 }
