--- a/src/stylesheets/components/_star.scss
+++ b/src/stylesheets/components/_star.scss
@@ -5,7 +5,7 @@
     margin: .2rem;
     float: left;
 
-    background-color: $color-grey-light;
+    background-color: $color-primary-light;
     clip-path: polygon(50% 0%, 63% 38%, 100% 38%, 69% 59%, 82% 100%, 50% 75%, 18% 100%, 31% 59%, 0% 38%, 37% 38%);
 
     &.selected {
