--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -1,19 +1,18 @@
 .text-button {
     position: relative;
-    border: none;
-    background: transparent;
-    outline: none;
+    letter-spacing: .5rem;
     text-decoration: none;
-    color: $base-font-color;
+    text-transform: uppercase;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: $color-green;
+    cursor: pointer;
     transition: all .2s ease-out;
 
-    cursor: pointer;
-
     &--content-open {
-
-
-        color: $color-secondary-light;
-        font-weight: $font-bold;
+        color: $color-pink;
+        font-weight: $font-light;
 
     }
 
@@ -27,10 +26,9 @@
         transition: all .2s ease-out;
         display: block;
         width: 100%;
-        height: .3rem;
-        border-radius: 3rem;
-        background: linear-gradient(to right, orange, yellow, rgb(95, 250, 95), cyan, blue, violet);
-
+        height: .2rem;
+        border-radius: 7rem;
+        background: $color-pink;
     }
 
 
@@ -48,9 +46,10 @@
 
 .remove-PColor-button {
     padding: 1rem;
+    color: $color-white;
     border-radius: $border-radius;
     outline: none;
-    background: $color-primary-dark;
+    background: $color-pink;
     border: none;
     transition: all .2s ease-out;
 
