--- a/src/stylesheets/components/_palette-view.scss
+++ b/src/stylesheets/components/_palette-view.scss
@@ -7,11 +7,12 @@
         width: 90%;
         text-align: center;
 
-        padding: 2rem 0;
-        background: white;
+        padding: 3rem 0;
+        background: $color-primary-dark;
 
         display: flex;
         flex-direction: column;
+        align-items: center;
 
     }
 
@@ -23,13 +24,18 @@
 
 .palette {
     &__container {
+        background: $color-white;
         display: flex;
         flex-direction: column;
-        width: 100%;
-        padding: 0 1.5rem;
+        width: 90%;
+        margin: 1rem 2rem;
+        border-radius: $border-radius;
+        padding: 2rem 1rem;
     }
 
     &__name {
+        color: $color-primary-dark;
+        font-weight: 700;
         text-align: center;
     }
 
@@ -88,10 +94,10 @@
 
         &:hover p {
             visibility: visible;
-            color: white;
+            color: $color-secondary;
 
             &:hover {
-                color: $color-grey-dark;
+                color: $color-primary-light;
             }
 
 
