--- a/src/stylesheets/modules/_utility.scss
+++ b/src/stylesheets/modules/_utility.scss
@@ -53,7 +53,8 @@
 }
 
 .list-item--selected {
-    background: $color-primary-dark;
+    background: $color-secondary;
+    color: $color-white;
 }
 
 .hidden {
