--- a/src/stylesheets/modules/_variables.scss
+++ b/src/stylesheets/modules/_variables.scss
@@ -1,20 +1,38 @@
+/// ---> Color Variables
+
+// Accessory Colors
 $color-red: rgb(230, 46, 26); //900
+$color-pink: #e91e63;
 $color-black: black;
+$color-white: #FAFAFD;
 $color-green: lighten(#509e33, 20%);
 
-// Main Colors
-$color-grey-dark: #5d6063;
-$color-grey: lighten($color-grey-dark, 10%);
-$color-grey-light: #cbcbcb;
-$color-grey-lightest: lighten($color-grey-dark, 50%);
+// Font Colors
+$base-font-color: rgba(250, 250, 253, 0.849);
+$secondary-font-color: #FF6D10;
 
-$color-primary-dark: #e9e8e8;
-$color-primary-light: #f5f5f5;
+// Primary and Secondary Colors
 
-$color-secondary-darkest:#33649e;
-$color-secondary-dark: #3d7cc6;
-$color-secondary-light: #5995da;
+$color-primary-dark:#2c343a;
+$color-primary-light: #374046;
+$color-primary-lightest: #57626b;
+
+$color-secondary: #00bcd4;
+
 $color-secondary-lightest:#84b4eb;
+
+
+// Button Colors
+$button-color-light:#FAFAFA;
+// Box Shadows
+$box-shadow-light: 3px 3px 10px rgba(71, 48, 48, 0.199);
+$box-shadow-dark: 3px 3px 10px rgba(0, 0, 0, 0.4);
+
+
+//Border-Radius
+$border-radius: .2rem;
+
+$outline: 3px solid lighten($color-green, 20%);
 
 
 // Breakpoints
@@ -22,13 +40,3 @@ $break-sm: 700px;
 $break-md: 1100px;
 $break-lg: 1600px;
 $break-xl: 2000px;
-
-// Box Shadows
-$box-shadow-light: 3px 3px 10px rgba($color-grey-dark, .1);
-$box-shadow-dark: 3px 3px 10px rgba($color-grey-dark, .3);
-
-//Border-Radius
-$border-radius: .5rem;
-
-$outline: 3px solid lighten($color-green, 20%);
-// $outline: 3px solid lighten($color-secondary-light, 25%);
