--- a/src/stylesheets/modules/_variables.scss
+++ b/src/stylesheets/modules/_variables.scss
@@ -13,8 +13,8 @@ $secondary-font-color: #FF6D10;
 
 // Primary and Secondary Colors
 
-$color-primary-dark:#2c343a;
-$color-primary-light: #374046;
+$color-primary-dark:#1f2529;
+$color-primary-light: #262d31;
 $color-primary-lightest: #57626b;
 
 $color-secondary: #00bcd4;
@@ -25,8 +25,7 @@ $color-secondary-lightest:#84b4eb;
 // Button Colors
 $button-color-light:#FAFAFA;
 // Box Shadows
-$box-shadow-light: 3px 3px 10px rgba(71, 48, 48, 0.199);
-$box-shadow-dark: 3px 3px 10px rgba(0, 0, 0, 0.4);
+$box-shadow-dark: 3px 3px 10px rgba(0, 0, 0, 0.192);
 
 
 //Border-Radius
