--- a/src/stylesheets/components/_dropdown.scss
+++ b/src/stylesheets/components/_dropdown.scss
@@ -13,6 +13,8 @@
     display: flex;
     flex-direction: column;
 
+    z-index: 10;
+
     &__header {
         position: relative;
         height: 100%;
@@ -84,4 +86,9 @@
 
 .up {
     transform: rotate(-180deg);
+}
+
+.list-item--selected {
+    background: $color-secondary;
+    color: $color-white;
 }
