--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -45,6 +45,7 @@
 }
 
 .remove-PColor-button {
+    margin-top: 3rem;
     padding: 1rem;
     color: $color-white;
     border-radius: $border-radius;
@@ -52,6 +53,7 @@
     background: $color-pink;
     border: none;
     transition: all .2s ease-out;
+
 
 
     &:hover {
