--- a/src/stylesheets/components/_dropdown.scss
+++ b/src/stylesheets/components/_dropdown.scss
@@ -2,6 +2,7 @@
     position: relative;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
+    margin-bottom: 3rem;
     height: 8rem;
     width: 24rem;
     border-top: 2px dashed $color-green;
